--- a/cssRest.css
+++ b/cssRest.css
@@ -97,7 +97,7 @@ float: right;
 
 #total {
     max-width: 75vw;
-    height: 10vh;
+    min-height: 10vh;
     background-color: lightyellow;
     margin: 0;
 
